# LiveCaptionEveryTab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.en.md  README.es.md  README.ja.md  README.md  README.zh.md  SETUP-windows.md  SETUP.md  WINDOWS-ONECLICK.md  check.sh  install-mac.command  install-windows-oneclick.bat  pyproject.toml  setup.sh
.dryforge/004/: inventory.md
.dryforge/005/: inventory.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bridge/: asr.py  autostart.sh  backend_cuda.py  backend_fake.py  backend_parakeet.py  bench_2pass.py  bench_kv_boundary.py  bench_kv_e2e.py  bench_kv_reuse.py  bench_kv_window.py  bench_spk_fixture.py  bench_trans_latency.py  bench_translate.py  bench_translate_quality.py  diarize.py  install_models.py  model_runtime.py  ocr_mac.py  page_markers.py  policy.py  policy_ab.sh  prompts.py  run_bridge.sh  server.py  term_memory.py  test_assembler_decisions.py  test_aux_lm.py  test_backend_cuda.py  test_diarize.py  test_e2e_fake.py  test_evs_controller.py  test_glossary_repair.py  test_import_stubs.py  test_latency_profile.py  test_lm_tier.py  test_model_select.py  test_number_guard.py  test_ocr_geometry.py  test_policy.py  test_scheduler_staleness.py  (+6 more)
bridge/cuda/: asr_server.py  install_cuda_wsl.sh  lcc-cuda.env.example  lcc_cuda_stack.sh  quantize_whisper_q6.sh  run_bridge_cuda.sh  serve_asr.sh  serve_llama.sh  serve_whisper.sh  switch_asr_gguf.sh
bridge/tools/: bake_nemotron_prompt.py
docs/: caption-lifecycle.md  nemotron-multilingual-asr.md  page-translation-paradigms.md
extension/: background.js  caption-overlay.js  caption-scheduler.js  content.css  content.js  delay.js  manifest.json  offscreen.html  offscreen.js  page-seed.js  page-translator.js  pcm-worklet.js  pcm.js  popup.html  popup.js  protocol.js  term-memory.js  test_content_load.js  test_delay_runtime.js  test_extension_actions.js  test_offscreen_runtime.js  test_protocol.js  test_term_memory.js
extension/native-host/: install-host-windows-wsl.sh  install-host.sh  io.github.teukboong.livecaption.json  lcc_bridge_host.py  test_lcc_bridge_host.py
tools/: quality_gate.py
windows/: install-oneclick.ps1
