[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "live-caption-every-tab"
version = "0.1.0"
description = "Realtime foreign->Korean captions for any browser tab, fully local (Gemma 4 + Granite/Qwen3 ASR)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "teukboong" }]
keywords = ["captions", "subtitles", "asr", "translation", "mlx", "gemma", "local-llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Core deps run the bridge itself (VAD + WebSocket + model download + memory probe) on EITHER backend.
dependencies = [
    "silero-vad",
    "onnxruntime",
    "websockets",
    "numpy",
    "huggingface_hub",
    "psutil",          # reliable cross-platform "available memory" for translation tiering (vm_stat fallback)
]

[project.optional-dependencies]
# Apple Silicon (default backend): in-process MLX for ASR + Gemma-4 translation.
mlx = [
    "mlx-lm",                                  # full tier (26B-A4B) translator
    "mlx-vlm",                                 # mid/lite tiers (Gemma-4 nano E4B/E2B) translator — multimodal ckpts
    # mlx-audio runs the granite/qwen3 ASR engines. granite-speech-4.1's conv fix is only on git main (not PyPI
    # 0.4.3), so pin a main commit for reproducibility; swap to "mlx-audio>=0.4.4" once that releases.
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git@a7ef98604cfd752e9e5c9011bcee8ec8c67228be",
]
# Windows + NVIDIA via WSL2: the BRIDGE itself talks OpenAI-compatible HTTP (stdlib urllib) to the model servers,
# so it needs no extra Python deps beyond core.
cuda = []
# The CUDA ASR server (cuda/asr_server.py) runs ON the NVIDIA box and uses transformers/qwen-asr (NOT mlx-audio,
# which is Apple-only). Translation on CUDA is a separate llama.cpp server. See SETUP-windows.md.
cuda-asr = [
    "transformers>=4.57",
    "qwen-asr",
    "torch",
    "torchaudio",
    "accelerate",
    "soundfile",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]
# Power-user low-latency English ASR on CPU (off the GPU). Optional; pinned per backend_parakeet.py.
parakeet = ["sherpa-onnx==1.13.2"]

[project.urls]
Homepage = "https://github.com/teukboong/LiveCaptionEveryTab"
Repository = "https://github.com/teukboong/LiveCaptionEveryTab"

# This repo ships runnable scripts (bridge/, extension/), not an importable library — install only resolves
# dependencies. Tell setuptools there are no packages/modules to build so `pip install '.[mlx]'` just works.
[tool.setuptools]
py-modules = []
